--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,3 +30,16 @@ jobs:
       - run: |
           pip install tox poetry
           tox -e py39
+
+
+  binary:
+    timeout-minutes: 10
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2.3.4
+      - uses: actions/setup-python@v2.2.2
+        with:
+          python-version: 3.9.5
+      - run: |
+          pip install poetry pyoxidizer
+          poetry build && poetry run pyoxidizer build
