--- a/.mergify.yml
+++ b/.mergify.yml
@@ -25,6 +25,7 @@ pull_request_rules:
       - label!=manual merge
     actions:
       queue:
+        name: default
   - name: automatic merge from dependabot
     conditions:
       - check-success=GitGuardian Security Checks
@@ -34,6 +35,7 @@ pull_request_rules:
       - label!=manual merge
     actions:
       queue:
+        name: default
         priority: low
   - name: dismiss reviews except for core devs
     conditions:
