--- a/.mergify.yml
+++ b/.mergify.yml
@@ -34,6 +34,15 @@ pull_request_rules:
       queue:
         name: default
         priority: low
+
+  - name: dependabot conflict fixer
+    conditions:
+      - author=dependabot[bot]
+      - conflict
+    actions:
+      comment:
+        message: @dependabot rebase
+
   - name: dismiss reviews except for core devs
     conditions:
       - author!=@devs
