--- a/.mergify.yml
+++ b/.mergify.yml
@@ -41,7 +41,7 @@ pull_request_rules:
       - conflict
     actions:
       comment:
-        message: @dependabot rebase
+        message: "@dependabot rebase"
 
   - name: dismiss reviews except for core devs
     conditions:
