--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,26 +6,33 @@ authors = ["Mehdi Abaakouk <sileht@mergify.io>"]
 
 
 [tool.poetry.dependencies]
-python = "^3.10"
-httpx = "^0.20.0"
-rich = "^10.11.0"
+python = ">=3.10"
+httpx = ">=0.20.0"
+rich = ">=10.11.0"
 
-[tool.poetry.dev-dependencies]
-flake8 = {version = "^4.0.1"}
-flake8-black = {version = "^0.2.3"}
-flake8-blind-except = {version = "^0.2.0"}
-flake8-builtins = {version = "^1.5.3"}
-flake8-bugbear = {version = "^21.11.29"}
-flake8-use-fstring = {version = "^1.3"}
-flake8-docstrings = {version = "^1.6.0"}
-flake8-rst-docstrings = {version = "^0.2.5"}
-flake8-logging-format = {version = "^0.6.0"}
-flake8-comprehensions = {version = "^3.7.0"}
-isort = {version = "^5.8.0"}
-mypy = {version = "^0.930"}
-pytest = {version = "^6.2.5"}
-pyoxidizer = "^0.18.0"
+[tool.poetry.group.dev.dependencies]
+flake8 = {version = ">=4.0.1"}
+flake8-black = {version = ">=0.2.3"}
+flake8-blind-except = {version = ">=0.2.0"}
+flake8-builtins = {version = ">=1.5.3"}
+flake8-bugbear = {version = ">=21.11.29"}
+flake8-use-fstring = {version = ">=1.3"}
+flake8-docstrings = {version = ">=1.6.0"}
+flake8-rst-docstrings = {version = ">=0.2.5"}
+flake8-logging-format = {version = ">=0.6.0"}
+flake8-comprehensions = {version = ">=3.7.0"}
+isort = {version = ">=5.8.0"}
+mypy = {version = ">=0.930"}
+pytest = {version = ">=6.2.5"}
+pyoxidizer = ">=0.24.0"
 
 [tool.poetry.scripts]
 git-push-stack = 'git_push_stack:cli'
 
+
+[tool.isort]
+force_single_line = true
+lines_after_imports = 2
+force_sort_within_sections = true
+known_first_party = "git_push_stack"
+default_section = "THIRDPARTY"
