--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,15 +1,25 @@
-defaults:
-  actions:
-    queue:
-      name: default
-      method: rebase
+extends: .github
 
 queue_rules:
   - name: default
+    allow_inplace_checks: true
     conditions:
-      - check-success=pep8
-      - check-success=py310
+      - and: &CheckRuns
+          - check-success=pep8
+          - check-success=py310
+      - schedule=Mon-Fri 09:00-17:30[Europe/Paris]
     speculative_checks: 5
+
+  - name: lowprio
+    allow_inplace_checks: true
+    conditions:
+      - and: *CheckRuns
+      - schedule=Mon-Fri 09:00-17:00[Europe/Paris]
+    batch_size: 7
+    batch_max_wait_time: 5min
+    queue_branch_merge_method: fast-forward
+    disallow_checks_interruption_from_queues:
+      - default
 
 pull_request_rules:
   - name: automatic merge
@@ -32,55 +42,5 @@ pull_request_rules:
       - label!=manual merge
     actions:
       queue:
-        name: default
-        priority: low
-
-  - name: dependabot conflict fixer
-    conditions:
-      - author=dependabot[bot]
-      - conflict
-    actions:
-      comment:
-        message: "@dependabot rebase"
-
-  - name: dismiss reviews except for core devs
-    conditions:
-      - author!=@devs
-    actions:
-      dismiss_reviews: {}
-  - name: dismiss reviews for core devs
-    conditions:
-      - author=@devs
-    actions:
-      dismiss_reviews:
-        # Do not remove approval for core devs
-        approved: False
-  - name: auto add wip
-    conditions:
-      - title~=^(wip|WIP).*
-    actions:
-      label:
-        add: ["work-in-progress"]
-  - name: warn on conflicts
-    conditions:
-      - conflict
-    actions:
-      comment:
-        message: "@{{author}} this pull request is now in conflict 😩"
-      label:
-        add:
-          - conflict
-  - name: remove conflict label if not needed
-    conditions:
-      - -conflict
-    actions:
-      label:
-        remove:
-          - conflict
-  - name: warn on CI failure for hotfix
-    conditions:
-      - label=hotfix
-      - "#check-failure>0"
-    actions:
-      comment:
-        message: Your hotfix is failing CI @{{author}} 🥺
+        name: lowprio
+        method: merge
