chore(deps): install poethepoet

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ isort = {version = ">=5.8.0"}
 mypy = {version = ">=0.930"}
 pytest = {version = ">=6.2.5"}
 pyoxidizer = ">=0.24.0"
+poethepoet = "^0.20.0"
 
 [tool.poetry.scripts]
 git-push-stack = 'git_push_stack:cli'
