--- a/poe.toml
+++ b/poe.toml
@@ -9,7 +9,7 @@ cmd = "pytest -v --pyargs git_push_stack"
 help = "Run linters"
 default_item_type = "cmd"
 sequence = [
-  "flake8",
-  "isort -c .",
+  "ruff check .",
+  "black --check .",
   "mypy",
 ]
