--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "mergify_cli"
 version = "0.1.1"
 description = ""
 authors = ["Mehdi Abaakouk <sileht@mergify.com>"]
-
+readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.10"
