chore(poetry): update toml
Some data might be missing in order to build PyPi distrib

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [tool.poetry]
 name = "mergify_cli"
 version = "0.1.1"
-description = ""
+description = "Mergify CLI is a tool that automates the creation and management of stacked pull requests on GitHub"
 authors = ["Mehdi Abaakouk <sileht@mergify.com>"]
 readme = "README.md"
+license = "Apache License"
 
 [tool.poetry.dependencies]
 python = ">=3.10"
