chore(poetry): add version plugin
In order to update the version at each push on
PyPi, we needed to use a poetry plugin.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ license = "Apache License"
 python = ">=3.10"
 httpx = ">=0.20.0"
 rich = ">=10.11.0"
+cleo = "*"
+
+[tool.poetry.plugins."poetry.plugin"]
+version = "version_plugin:VersionPlugin"
 
 [tool.poetry.group.dev.dependencies]
 mypy = {version = ">=0.930"}
