--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,9 +20,10 @@ jobs:
         with:
           python-version: 3.11
       - name: Get version
-        run: echo "VERSION=$(date +'%Y.%m.%d.%H.%M')" >> $GITHUB_OUTPUT
+        run: echo "version=$(date +'%Y.%m.%d.%H.%M')" >> $GITHUB_OUTPUT
       - run: |
-          git tag $VERSION
+          echo ${{ env.version }}
+          git tag ${{ env.version }}
           pip install poetry
           poetry self add poetry-version-plugin
           poetry install --sync
