--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,8 @@ jobs:
       - name: Get version
         run: |
           echo "version=$(date +'%Y.%m.%d.%H.%M')" >> "$GITHUB_ENV"
+      - env:
+          GH_TOKEN: ${{ secrets.MERGIFY_CI_BOT_PAT }}
       - run: |
           git tag $version
           git push origin $version
