chore: migrate to ruff formatter
Change-Id: I5ce7fec5759e3b5f10220e4cd7b876dca1f8f37d

--- a/poe.toml
+++ b/poe.toml
@@ -10,6 +10,6 @@ help = "Run linters"
 default_item_type = "cmd"
 sequence = [
   "ruff check .",
-  "black --check .",
+  "ruff format --check .",
   "mypy",
 ]
