--- a/.mergify.yml
+++ b/.mergify.yml
@@ -8,14 +8,25 @@ queue_rules:
           - check-success=test
       - "#approved-reviews-by>=1"
       - "#changes-requested-reviews-by=0"
+      - "#review-threads-unresolved=0"
+      - "#review-requested=0"
     speculative_checks: 5
+    commit_message_template: |
+      {{ title }} (#{{ number }})
+
+      {{ body }}
+    merge_method: squash
 
   - name: lowprio
     allow_inplace_checks: true
     queue_conditions:
       - and: *CheckRuns
+      - "#commits=1"
+      - author=dependabot[bot]
+    merge_method: merge
     batch_size: 7
     batch_max_wait_time: 5min
+    commit_message_template: null
     queue_branch_merge_method: fast-forward
     disallow_checks_interruption_from_queues:
       - default
@@ -24,18 +35,10 @@ pull_request_rules:
   - name: automatic merge
     conditions:
       - base=main
-      - check-success=semantic-pull-request
+      - label!=manual merge
+      - "check-success=Rule: Conventional Commit (post_check)"
     actions:
       queue:
-        name: default
-
-  - name: automatic merge from dependabot
-    conditions:
-      - author=dependabot[bot]
-      - check-success=semantic-pull-request
-    actions:
-      queue:
-        name: lowprio
 
   - name: request review
     conditions:
