--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,14 @@ mypy-extensions = "^1.0.0"
 ruff = ">=0.0.277,<0.1.10"
 pytest = {version = ">=6.2.5"}
 poethepoet = ">=0.21,<0.25"
+pytest-asyncio = "^0.23.2"
+respx = "^0.20.2"
 
 [tool.poetry.scripts]
 mergify = 'mergify_cli:cli'
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
 
 [tool.poe]
 include = ["poe.toml"]
