ci(Mergify): always post success for changelog
Change-Id: I635fa22f9ff2f6db0af008e2ad21b415228dfcf7

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -56,12 +56,11 @@ pull_request_rules:
           - devs
 
   - name: changelog requirements
-    conditions:
-      - base=main
+    conditions: []
     actions:
       post_check:
         title: |
-          {% if check_succeed %}
+          {% if check_succeeded %}
           Changelog requirements are present.
           {% else %}
           Changelog requirements are missing.
