refactor: split __init__.py
This is the first step before replacing argparse by cli

Change-Id: Id5aa36df29dfb5273842fc23301de29c2db4ba08

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ respx = ">=0.20.2,<0.22.0"
 types-aiofiles = ">=23.2.0.20240106,<25.0.0.0"
 
 [tool.poetry.scripts]
-mergify = 'mergify_cli:cli'
+mergify = 'mergify_cli.cli:main'
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
