build: replace poetry-version-plugin by poetry-dynamic-versioning
poetry-version-plugin is deprecated

Change-Id: I396d6dd8f256e37378081c2597bdf7f4ed54e203

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
           git tag $version
           git push origin $version
           pip install poetry
-          poetry self add poetry-version-plugin
+          poetry self add poetry-dynamic-versioning[plugin]
           poetry install --sync
           poetry build
       - name: Publish package distributions to PyPI
