--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,5 +25,6 @@ jobs:
           poetry self add poetry-dynamic-versioning[plugin]
           poetry install --sync
           poetry build
+          gh release create --generate-notes $version ./dist/*
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
