--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ rich = ">=10.11.0"
 aiofiles = ">=23.2.1,<25.0.0"
 click = "^8.1.7"
 click-default-group = "^1.2.4"
+opentelemetry-exporter-otlp-proto-http = "^1.29.0"
+opentelemetry-sdk = "^1.29.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -36,6 +38,8 @@ respx = ">=0.20.2,<0.23.0"
 types-aiofiles = ">=23.2.0.20240106,<25.0.0.0"
 types-click = "^7.1.8"
 types-click-default-group = "^1.2.0.0"
+anys = "^0.3.1"
+responses = "^0.25.6"
 
 [tool.poetry.scripts]
 mergify = 'mergify_cli.cli:main'
@@ -132,6 +136,14 @@ ignore = [
     "TD003",
     # NOTE(charly): Magic value used in comparison
     "PLR2004",
+    # List comprehensions are most efficient in most cases now
+    "PLR1702",
+    # We use mock.patch.object, which automatically pass the mock as an
+    # argument to the test if no `new` is specified, without needing the mock
+    # itself.
+    "PT019",
+    # We don't want to enforce the number of statements
+    "PLR0914", "PLR0912", "PLR0915",
 ]
 
 [tool.ruff.lint.per-file-ignores]
