--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ click = "^8.1.7"
 click-default-group = "^1.2.4"
 opentelemetry-exporter-otlp-proto-http = "^1.29.0"
 opentelemetry-sdk = "^1.29.0"
+tenacity = "^9.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
