--- a/pyproject.toml
+++ b/pyproject.toml
@@ -148,7 +148,7 @@ ignore = [
 ]
 
 [tool.ruff.lint.per-file-ignores]
-"mergify_cli/tests/**/*.py" = ["S101"]
+"mergify_cli/tests/**/*.py" = ["S101", "SLF001"]
 
 [tool.ruff.lint.isort]
 force-single-line = true
