feat: add `cicd.test.quarantined` attribute to test case spans
Related to MRGFY-5616

Change-Id: Iae117825b7e42a6c16de1a27aaa71770b93d7db4

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -146,6 +146,8 @@ ignore = [
     # We don't want to enforce the number of statements
     "PLR0914", "PLR0912", "PLR0915",
     "B904",
+    # Unnecessary parenthesis on raised exceptions, this breaks `isinstance` on exceptions
+    "RSE102",
 ]
 
 [tool.ruff.lint.per-file-ignores]
