--- a/poe.toml
+++ b/poe.toml
@@ -17,6 +17,17 @@ sequence = [
 ]
 
 [tool.poe.tasks.setup]
+env.CI.default = ""
 help = "Sync poetry virtualenv"
-executor = { type  = "simple" }
-cmd = "./tools/poetry-install.sh"
+control.expr = "${CI}.strip().lower()"
+
+    [[tool.poe.tasks.setup.switch]]
+    case = ["true", "1", "y", "yes"]
+    env = { POETRY_VIRTUALENVS_OPTIONS_NO_PIP = "true", POETRY_VIRTUALENVS_OPTIONS_NO_SETUPTOOLS = "true" }
+    executor = { type  = "simple" }
+    cmd = "poetry sync --no-cache"
+
+    [[tool.poe.tasks.setup.switch]]
+    case = ["", "false", "0", "n", "no"]
+    executor = { type  = "simple" }
+    cmd = "poetry sync"
