ci(mergify): fix CIs configuration
Change-Id: I335ccec6fc783c9b5323258c884a3a8307567d26

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -2,8 +2,8 @@ extends: .github
 shared:
   check_runs: &CheckRuns
     - check-success=test (ubuntu-24.04)
-    - check-success=test (windows-2022)
-    - check-success=test (mac-15)
+    - check-success=test (windows-2025)
+    - check-success=test (macos-15)
 
 queue_rules:
   - name: dependencies
