chore(ci-insights): Enable new flaky test detections
Relates-To: MRGFY-5827
Change-Id: Ic3f8de1767d6e53577f415bbe62849b764e5eb20

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,6 +35,7 @@ jobs:
       - name: Tests
         shell: bash
         env:
+          _MERGIFY_TEST_NEW_FLAKY_DETECTION: "true"
           PYTHONUTF8: "${{ matrix.os == 'windows-2025' && 1 || 0 }}"
         run: poetry run poe test
 
