--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ click-default-group = "^1.2.4"
 opentelemetry-exporter-otlp-proto-http = "^1.29.0"
 opentelemetry-sdk = "^1.29.0"
 tenacity = "^9.1.2"
+pyyaml = "^6.0.3"
+pydantic = "^2.11.9"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -39,6 +41,7 @@ respx = ">=0.20.2,<0.23.0"
 types-aiofiles = ">=23.2.0.20240106,<25.0.0.0"
 types-click = "^7.1.8"
 types-click-default-group = "^1.2.0.0"
+types-pyyaml = "6.0.12.20250915"
 anys = "^0.3.1"
 responses = "^0.25.6"
 
