chore(ci-insights): Add `MERGIFY_TEST_FLAKY_DETECTION` variable when running CI
Relates-To: MRGFY-5905
Change-Id: Id77e3e4f9631f8242a2b8292dce84932c1497e7d

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,6 +36,7 @@ jobs:
         shell: bash
         env:
           _MERGIFY_TEST_NEW_FLAKY_DETECTION: "true"
+          MERGIFY_TEST_FLAKY_DETECTION: "true"
           PYTHONUTF8: "${{ matrix.os == 'windows-2025' && 1 || 0 }}"
         run: poetry run poe test
 
